static/css/graph.css
.graph-wrapper {
  overflow-x: scroll;
  direction: rtl;
  width: 100vw;
  height: 50%;
}
.graph-chart {
  height: 100%;
  margin: 0 20px;
  display: flex;
  justify-content: flex-start;
  gap: 20px;
}
.graph-group {
  display: flex;
  align-items: flex-end;
  gap: 5px;
}
.graph-bar {
  position: relative;
  width: 20px;
  height: calc(100% * var(--size));
  background-color: var(--fg);
  border-radius: 3px;
}
.graph-bar::before {
  content: attr(data-value);
  font-size: 1.2rem;
  font-weight: bold;
  width: 5ch;
  background-color: var(--fg);
  color: var(--bg);
  text-align: center;
  padding: 2px 0;
  border-radius: 4px;
  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  bottom: 25px;
  left: -4ch;
  transform: translateX(50%);
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.3s;
}
/* Tooltip visibility */
.graph-bar:hover::before {
  visibility: visible;
  opacity: 1;
}
.graph-bar:nth-of-type(6n+1) {
  background-color: var(--green);
}
.graph-bar:nth-of-type(6n+2) {
  background-color: var(--orange);
}
.graph-bar:nth-of-type(6n+3) {
  background-color: var(--blue);
}
.graph-bar:nth-of-type(6n+4) {
  background-color: var(--red);
}
.graph-bar:nth-of-type(6n+5) {
  background-color: var(--aqua);
}
.graph-bar:nth-of-type(6n+6) {
  background-color: var(--purple);
}

